# cake

./: .gitignore  .mise.toml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  implementation-notes.md  justfile  panache.toml  prek.toml  rust-toolchain.toml
.agents/: DOCS.md  PLANS.md  RESEARCH.md  TASKS.md  ahm.json
.agents/.research/: README.md  bash-security.md  claude-code-ideas.md  claude-md-management.md  cli-approaches.md  clippy-issues.md  context-management.md  documentation-verification.md  glm51-error.md  hooks.md  index.md  opencode-zen-headers.md  performance-suggestions.md  proptest-idea.md  readiness-report.md  reasoning.md  retry-strategy.md  session-analysis.md  usage.md
.agents/.research/archived/: current-issues.md  glm51-error.md  readiness-report.md  session-analysis-2.md  session-analysis.md  usage.md
.agents/.research/inbox/: code-mode.md
.agents/.research/investigations/: agent-context-issues.md  cake-issues-202605.md  clippy-issues.md  current-issues.md  glm51-error.md  performance-suggestions.md  prompt-cache-break-detection.md  readiness-report.md  runtime-visibility.md  security-issues.md  session-analysis-2.md  session-analysis.md  testing-followup.md
.agents/.research/sources/: add-skills-support.md  claude-code-ideas.md  claude-md-management.md  clippy-stricter-config.md  codex-cli.md  ds4-agent-compaction.md  fff-search-integration.md  opencode-compaction.md  pi-compaction.md  pi-session-format.md  pi-sessions.md  pi-settings.md  rust-docs.md  tool-definitions-common-tools.md
.agents/.research/topics/: bash-security.md  block-destructive-commands.md  context-compaction.md  context-management.md  harness-anchored-editing.md  hooks.md  proptest-idea.md  provers.md  reasoning.md  retry-strategy.md  usage.md
.agents/.tasks/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  009.md  010.md  011.md  012.md  013.md  014.md  015.md  016.md  017.md  018.md  019.md  020.md  021.md  022.md  023.md  024.md  025.md  026.md  027.md  028.md  029.md  030.md  031.md  032.md  033.md  034.md  035.md  036.md  037.md  038.md  039.md  040.md  (+107 more)
.agents/.tasks/active/: 004.md  005.md  006.md  007.md  008.md  009.md  010.md  011.md  012.md  014.md  015.md  016.md  030.md  086.md  087.md  088.md  090.md  091.md  092.md  (+132 more)
.agents/scripts/: cancel-task.py  complete-task.py  generate-task-indexes.py
.cake/: hooks.json  hooks.json.example  settings.toml  settings.toml.example
.cake/hooks/: block-cargo-test-lib.sh  format-edited-file.sh  rust-command-failure-context.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml  scheduled.yml
ci/: cargo-crap-baseline.json
docs/: DOMAIN.md  README.md
docs/adr/: 001-agent-loop-architecture.md  002-agent-skills.md  003-settings-profiles.md  004-append-only-session-task-events.md  005-command-hooks.md  006-linux-landlock-release-artifacts.md  007-linux-landlock-default-dependency.md  007-per-session-telemetry-sidecar.md  008-structured-provider-headers.md  009-debug-models-cli-introspection.md  010-interrupt-handling.md  010-linux-landlock-default-dependency.md  README.md  index.md
docs/design-docs/: api-retry-strategy.md  cli.md  conversation-types.md  edit-tool-session-analysis.md  hooks.md  index.md  logging.md  models.md  prompts.md  sandbox.md  session-management.md  settings.md  skills.md  streaming-json-output.md  tools.md
docs/guardrails/: agent-loop-tools-and-tool-execution.md  cli-and-user-output.md  dependencies-build-ci-release.md  documentation.md  implementation-quality.md  index.md  prompts-skills-and-hooks.md  providers-models-and-settings.md  sandboxing-and-filesystem-boundaries.md  sessions-resume-and-machine-readable-output.md
docs/references/: chat-completions-api.md  responses-api.md
scripts/: cargo-crap.sh  check-coverage.sh  check-indexes.py  lint-module-size.py
src/: exit_code.rs  hooks.rs  hooks_tests.rs  main.rs  main_tests.rs  session_telemetry.rs  time_format.rs
src/cli/: cmd_runner.rs  debug.rs  mod.rs  output.rs  run_mode.rs  session_factory.rs
src/clients/: agent.rs  agent_observer.rs  agent_runner.rs  agent_state.rs  backend.rs  chat_completions.rs  chat_completions_tests.rs  chat_types.rs  mod.rs  provider_strategy.rs  responses.rs  responses_response_parsing_tests.rs  responses_tests.rs  responses_types.rs  retry.rs  skill_dedup.rs  types.rs
src/config/: config_dir.rs  data_dir.rs  hooks.rs  mod.rs  model.rs  session.rs  settings.rs  settings_tests.rs  skills.rs  skills_tests.rs  worktree.rs
src/models/: messages.rs  roles.rs
src/prompts/: mod.rs  system.md
src/types/: conversation.rs  mod.rs  session.rs  session_tests.rs  usage.rs
tests/: debug_models.rs  exit_codes.rs  session_telemetry.rs  stdin_handling.rs
tests/fixtures/: mod.rs  responses.rs  settings.rs
tests/support/: mod.rs
(+313 files in other folders)
