[package]
name = "cake"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.optimized]
inherits = "release"
lto = false
codegen-units = 16

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0"
futures = { version = "0.3", default-features = false, features = [
  "std",
  "async-await",
  "executor",
] }
fs4 = "1.1"
hex = "0.4"
indicatif = "0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
reqwest = { version = "0.13.3", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11"
serde_json = "1.0.149"
serde_yaml = "0.9"
toml = "1.1"
thiserror = "2.0.18"
tempfile = "3"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
similar = { version = "3.1.0", features = ["inline"] }
infer = { version = "0.19.0", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = { version = "0.4", optional = true }

[features]
default = []
landlock = ["dep:landlock"]

[dev-dependencies]
insta = { version = "1", features = ["filters", "json"] }
temp-env = "0.3"
tempfile = "3"
wiremock = "0.6"

# Enforce code quality standards across the workspace
[lints.rust]
# Binary crate - missing_docs produces noise without producing useful public API docs.
missing_docs = "allow"

# Catch common mistakes
rust_2018_idioms = { level = "warn", priority = -1 }
missing_debug_implementations = "warn"

[lints.clippy]
# Error handling - no unwrap/expect in production code
unwrap_used = "deny"
expect_used = "deny"

# Pedantic and nursery for strict quality
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow some noisy ones
missing_docs_in_private_items = "allow"
missing_errors_doc = "deny"

# Coding-agent guardrails: require #[expect(..., reason = "...")] instead of #[allow]
allow_attributes = "deny"
allow_attributes_without_reason = "deny"

# Panic prevention (restriction category, high-value)
string_slice = "warn"

# Silent failure prevention
let_underscore_must_use = "warn"

# Error handling
unused_result_ok = "warn"

# Unsafe hygiene
undocumented_unsafe_blocks = "warn"

# Additional quality checks
enum_glob_use = "deny"
exit = "deny"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
implicit_clone = "warn"
